--- a/apps/site/src/_pages/docs/4_spec/99_roadmap.mdx
+++ b/apps/site/src/_pages/docs/4_spec/99_roadmap.mdx
@@ -14,7 +14,12 @@ Our aim is to develop a new standard for building frontend components, or "block
 
 ## History
 
-_Coming soon:_ links to RFCs accepted, module release announcements, and new versions of the spec will be collated here.
+- **Version 0.1:** in January 2022, an early 0.1 draft of the Block Protocol [was shared](https://www.joelonsoftware.com/2022/01/27/making-the-web-better-with-blocks/) on Joel Spolsky's blog. This outlined the concept of the Block Protocol, and an initial proposed technical specification was shared alongside the source code for an example embedding application, _[HASH](https://hash.ai/platform/hash)_.
+- **Version 0.2 and Graph Module:** in June 2022, version 0.2 of the specification [launched at WeAreDevelopers](https://hash.dev/blog/block-protocol-v02) in Berlin. This introduced the modular architecture used by the protocol today, including an initial release of the _graph module_, improving support for structured data in blocks separated from its logic.
+- **Hook Module:** in October 2022, the _hook module_ was added to the specification, allowing blocks to [integrate tightly with the native capabilities](https://hash.dev/blog/hook-service) of embedding applications, in an application non-specific way. For example, this allowed blocks with text fields to share the shortcuts, commands and text-styling/controls alreay present within their environment.
+- **Version 0.3:** in February 2023, [we released](https://hash.dev/blog/block-protocol-0-3-wordpress) the biggest update to the Block Protocol yet, overhauling the _core_ and _graph module_, and introducing the new _type system_.
+- **Service Module:** that month we also introduced "zero-knowledge support" for external services and integrations in blocks. This provided blocks with the ability to communicate with external APIs and services, including those which require API keys, without embedding applications having to specifically support (or even be aware of) those services. This allowed users to access external APIs from services like OpenAI and Mapbox within blocks, without needing to sign up for their own accounts, manage billing separately from the apps they already use, or worry about API keys.
+- **WordPress support:** additionally in February 2023, we launched the _Block Protocol for WordPress_ integration for [Wordpress.com](https://wordpress.com/plugins/blockprotocol) and [self-hosted WordPress](https://wordpress.org/plugins/blockprotocol) users. This made the Block Protocol accessible to all users of the world's most widely used content management system (CMS).
 
 ## Proposed Changes
 
@@ -100,7 +105,13 @@ The most detailed version of this would be for blocks to be able to:
   - which specific messages from a module they require/support
   - any additional detail on what they require from a message, which might be a particular scope, e.g. access to retrieve or create particular types of entities.
 
-##### Graph
+##### Service module
+
+**Block-user authentication:** we will be providing a mechanism for users to insert their own secrets for use when connecting to external services which require them to individually authenticate, in order to access their _own private information_ within blocks (e.g. Coda).
+
+**Generic callback handler:** we will be removing service/provider specific references from the specification and making the service module more readily extensible, in anticipation of allowing third-party providers to self-register additional services.
+
+##### Graph module
 
 ###### Entity type extension and duplication
 
