--- a/apps/site/src/_pages/docs/6_roadmap.mdx
+++ b/apps/site/src/_pages/docs/6_roadmap.mdx
@@ -33,38 +33,36 @@ The "RFC" (Request For Comment) process provides a consistent and controlled pat
 
 _This link will be replaced with direct links to the RFCs on blockprotocol.org soon_
 
-### Modules
-
-#### New modules
+### New modules
 
 We expect to introduce the following new modules to the Block Protocol to support additional functionality that requires application-block cooperation. We welcome suggestions for other modules that may be useful, via GitHub [discussions](https://github.com/blockprotocol/blockprotocol/discussions) or by creating [RFCs](https://github.com/blockprotocol/blockprotocol/tree/main/rfcs).
 
-##### Actions module
+#### Actions module
 
 A generalized approach to capturing user actions could involve a module whereby a block reports on which elements within it capture actions (e.g. a button), and embedding applications could choose to bind further actions to them as a response.
 
-##### Comments module
+#### Comments module
 
 We want to facilitate users leaving comments on elements within blocks. This could be:
 
 - managed entirely outside the block, e.g. by a wrapper around the block which provides a context menu to users for adding comments on blocks – which avoids blocks having to have any knowledge of commenting, but could interfere with how the block wants to respond to user input, or
 - managed by providing a new module whereby blocks could send messages requesting that comments be attached to specific elements in blocks – which allows blocks to have control over how and to what element the user is able to attach comments.
 
-##### Internationalization module
+#### Internationalization module
 
 A module to provide the user’s preferred locale to blocks, for localization and internationalization. Please see the [GitHub discussion](https://github.com/blockprotocol/blockprotocol/discussions/315). This module could be generalized to support passing other user-specific preferences or options which can be used to customize blocks (e.g. accessibility choices around font-size, or color vision deficiency).
 
-##### Location module
+#### Location module
 
 A module to provide the user’s location to blocks (with appropriate safeguarding).
 
-##### Styling module
+#### Styling module
 
 The styling module would involve the embedding application to communicate styling or theming data to blocks, to allow blocks to apply styling to make them appear more visually consistent with the application embedding them.
 
 Please see the [GitHub discussion](https://github.com/blockprotocol/blockprotocol/discussions/180) for a discussion of what data might be transported as part of a styling module (e.g. a `styleObject`, or a CSS file).
 
-##### Users module
+#### Users module
 
 Much familiar functionality requires a reference to the current user, or being able to select from users in the system. For example:
 
@@ -74,19 +72,19 @@ Much familiar functionality requires a reference to the current user, or being a
 
 A users module could help expose some of this data to blocks, with appropriate safeguarding and permissions sought.
 
-##### Versioning module
+#### Versioning module
 
 While embedding applications can handle displaying an interface for reloading blocks at particular earlier versions, we will specify a way of communicating to blocks that (a) an earlier version is being displayed, and (b) the difference with the current version would allow blocks to implement visual diffs.
 
-#### Changes to existing modules
+### Changes to existing modules
 
-##### Core
+#### Core
 
-###### Block definition
+##### Block definition
 
 **Block entry point:** we currently provide that blocks can be exposed to applications in three different ways: as custom elements, HTML files, or React components. We may wish to reduce this to a single entry point. Please [see the discussion](https://github.com/blockprotocol/blockprotocol/discussions/392) for more.
 
-###### Module permissions / requirements
+##### Module permissions / requirements
 
 **Problem:**
 
@@ -105,27 +103,27 @@ The most detailed version of this would be for blocks to be able to:
   - which specific messages from a module they require/support
   - any additional detail on what they require from a message, which might be a particular scope, e.g. access to retrieve or create particular types of entities.
 
-##### Service module
+#### Service module
 
 **Block-user authentication:** we will be providing a mechanism for users to insert their own secrets for use when connecting to external services which require them to individually authenticate, in order to access their _own private information_ within blocks (e.g. Coda).
 
 **Generic callback handler:** we will be removing service/provider specific references from the specification and making the service module more readily extensible, in anticipation of allowing third-party providers to self-register additional services.
 
-##### Graph module
+#### Graph module
 
-###### Entity type extension and duplication
+##### Entity type extension and duplication
 
 Currently, if a user wants to add additional information to an existing entity type, their only option is to make a brand new one and manually copy the structure. We'd like to add support for users to be able to "extend" types in a way that doesn't break existing entity types and allows for reusability across embedding applications and blocks. To allow for situations where a user wants to customize an entity type in a way that a non-compatible fashion, we want a mechanism to "duplicate" or "fork" an existing entity type. For in-depth motivation, a proposed implementation plan, and the wide-reaching implications [please see the RFC](https://github.com/blockprotocol/blockprotocol/pull/428).
 
-###### Non-primitive data types
+##### Non-primitive data types
 
 We define six primitive data types in the Graph type system. These data types define value spaces for the inner properties of entities, and currently are limited to basic primitives such as "text" or "number". Building robust data models will require the ability to define constraints and define validation mechanisms (think maximum/minimum lengths on properties, or applying regular expressions to define the pattern of a string). We are thinking about implementing this through allowing the creation of non-primitive data types, built off the composition and extension of other data types coupled with a suite of supported constraints. You can read more about this in [this RFC](https://github.com/blockprotocol/blockprotocol/pull/355).
 
-###### Pagination
+##### Pagination
 
 We intend to move to a cursor-based method for paginating results of querying entities, likely based on the [Connections](https://relay.dev/graphql/connections.htm) specification.
 
-###### Schema mapping
+##### Schema mapping
 
 The Block Protocol does not seek to describe or prescribe the shape of particular entities (e.g. what fields a `Person` has).
 
