--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -63,7 +63,7 @@ Implementing the Block Protocol means that an embedding application can easily a
 
 Once they are Block Protocol-compliant, applications can easily search for blocks which can visualize or edit any type of data, and add them without any further configuration.
 
-Blocks additionally make it easy to include structed data markup (JSON-LD) on pages, improving websites' search engine visibility and rankings.
+Blocks additionally make it easy to include structured data markup (JSON-LD) on pages, improving websites' search engine visibility and rankings.
 
 </FAQ>
 
