--- a/apps/site/src/_pages/about/0_index.mdx
+++ b/apps/site/src/_pages/about/0_index.mdx
@@ -21,11 +21,13 @@ The Þ is an open standard, accompanied by fully open-source tooling, not borne 
 
 **Our mission is to create a common communication layer for humans and machines.**
 
-We aim to do this by advancing the original vision of the semantic web, revisiting and introducing new incentives for the adoption of open schemas, and their convergence, to improve the accessibility and intelligibility of information across the web.
+We aim to do this by advancing the original vision of the semantic web, strengthening incentives to adopt and converge open schemas, improving the accessibility and intelligibility of information across the web.
 
 We believe this is possible through "blocks", frontend components whose styling and logic are cleanly separated from the data they work with.
 
 The Block Protocol allows developers to build high-quality blocks that look great and work well in any protocol-supporting application, and it allows applications to extend their interfaces at zero marginal cost. Neither blocks nor embedders need be aware of one another's existence, or make any special affordances for each other. This even extends to blocks that require external APIs and services to function, with embedding applications able to handle integrations themselves, or fallback to the Block Protocol's supporting middleware if required.
+
+Blocks meanwhile can make it _easier_ for users to capture information in a structured fashion than not, providing UX affordances for quickly capturing information of specific types, and allowing third-party services to be called which enrich the data provided.
 
 ## State of the protocol
 
