--- a/apps/site/src/_pages/docs/6_roadmap.mdx
+++ b/apps/site/src/_pages/docs/6_roadmap.mdx
@@ -5,7 +5,7 @@ Our aim is to develop a new standard for building frontend components, or "block
 ## Adoption strategy
 
 - **Develop valuable new blocks that provide utility to early-adopters.** Users of blocks should be attracted by the promise of obtaining new superpowers in their existing block-based applications, not merely out of appreciation for the protocol's technical design.
-- **Prototype implementations at every step.** Battle-testing the specification and proving (or disproving) ideas early saves time, and minimizes arguments about hypotheticals. Multiple diverse prototype environments ensure abstractions generalize across embedding applications, with fewer navel gazing committees.
+- **Prototype implementations at every step.** Battle-testing the specification and proving (or disproving) ideas early saves time, and minimizes arguments about hypotheticals. Multiple diverse prototype environments ensure abstractions generalize across embedding applications.
 - **Design and build in the open.** Our public RFC process is outlined on this page. Our monorepo is publicly accessible to anybody. Our code is open-source and can be hosted, forked, or otherwise evolved by the community without our prior permission.
 - **Zero reliance on centralized hosted services.** Hosted services are provided as a convenience only.
   - Things like the [Þ Hub](https://blockprotocol.org/hub) complement the specification by providing a means of discovering blocks, types, services, and hooks, but its use is not required.
