--- a/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
@@ -1,38 +1,42 @@
 # Using Blocks
 
-Block Protocol blocks are available in a number of embedding environments.
+Block Protocol (**Þ**) blocks can be used in a variety of different environments.
 
-## Now available
+## Environments
 
-### HASH
+### Now available
+
+#### HASH
 
 HASH is a block-based knowledge management, business intelligence and tool-building application.
 
 - The hosted version of HASH is [available for early access](https://hash.ai) and is in alpha
 - HASH is open source, and its code can be downloaded from the [`hashintel/hash` GitHub repository](https://github.com/hashintel/hash) - _please note that the `main` branch is currently unstable_
 
-### WordPress
+#### WordPress
 
 The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin adds support for Þ blocks within the existing WordPress Gutenberg editor. It can be downloaded directly from [the WordPress plugin directory](https://wordpress.org/plugins/blockprotocol/), or by any WordPress admin via the 'Plugins' screen in their `wp-admin`, by searching for the "Block Protocol".
 
-## Coming soon
+### Planned environments
 
-### GitHub Blocks
+#### GitHub Blocks
 
 **We are in the early stages of building out support for Block Protocol blocks in _GitHub_.** Blocks are currently only available in GitHub as part of the _GitHub Next_ early release program, but ultimately this should allow blocks you develop in accordance with the Block Protocol spec to be used within GitHub markdown READMEs interactively, and elsewhere on _GitHub.com_.
 
-### Figma
+#### Figma
 
 **We are planning support for Block Protocol blocks in both _Figma_ and _Figjam_.** Development has not yet begun. If you are interested in getting involved, please let us know on [our Discord](https://blockprotocol.org/discord).
 
 ### Other environments
 
-Support for additional embedding environments will arrive throughout 2023. If there are others you'd like to see us exploring, please [reach out](https://blockprotocol.org/contact) to us.
+Support for additional embedding environments will arrive throughout 2023.
 
-### Your own application
+#### Make a suggestion
 
-If you're interested in supporting the Block Protocol within your application now, allowing your users to insert and use blocks from the [Þ Hub](https://blockprotocol.org/hub), please [contact us](https://blockprotocol.org/contact) with more information about your intended use, and we'll be in touch.
+If there's an application you'd like to see us exploring, please [reach out](https://blockprotocol.org/contact) to us.
 
-We'll be releasing public documentation covering this process, but while the protocol remains under heavy active development, please reach out directly.
+#### Your own application
+
+Alternatively, if you're an application developer interested in implementing the Block Protocol within your own app, allowing your users to insert blocks and use services from the [Þ Hub](https://blockprotocol.org/hub), please [reach out to us](https://blockprotocol.org/contact) and we'll be in touch. While the protocol remains under heavy active development, we haven't yet released public documentation covering this process, but doing so is on our [roadmap](https://blockprotocol.org/docs/roadmap).
 
 You can also [register for updates](https://blockprotocol.org/signup) to get notified when we release new docs and tools for embedders.
