Drive-by: reference `entityTypeId` in updateEntity docs

--- a/apps/site/src/_pages/docs/1_blocks/02_develop.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/02_develop.mdx
@@ -166,7 +166,7 @@ A common use for the Graph Module is to update the block entity – to update th
 
 Each block template includes a demonstration of calling `graphModule.updateEntity` to update the block entity.
 
-To do this, you need to call `updateEntity` using the `entityId` of the `blockEntity`:
+To do this, you need to call `updateEntity` using the `entityId` and `entityTypeId` of the `blockEntity`:
 
 ```js
 // Update the block entity, and receive the updated entity in return
