update references of `/settings/*` to `/account/*`

--- a/apps/site/src/_pages/docs/1_blocks/02_develop.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/02_develop.mdx
@@ -416,7 +416,7 @@ To publish a block on the Hub take the following steps.
 ### Pre-requisite: obtain an API Key
 
 - If you don't yet already have an account, click the [sign up](https://blockprotocol.org/signup) button in the top-right corner of any page on the Þ website.
-- Once signed in, [create an API key](https://blockprotocol.org/settings/api-keys) and copy it to your clipboard.
+- Once signed in, [create an API key](https://blockprotocol.org/account/api) and copy it to your clipboard.
 
 ### Publish from your terminal
 
