--- a/apps/site/src/_pages/legal/terms/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/00_index.mdx
@@ -242,7 +242,7 @@ Our pricing and payment terms are available at [blockprotocol.org/pricing](/pric
 - We will immediately bill you when you upgrade from the free plan to any paying plan.
 - If you change from a monthly billing plan to a yearly billing plan, Block Protocol will bill you for a full year at the next monthly billing date.
 - If you upgrade to a higher level of service, we will bill you for the upgraded plan immediately.
-- You may change your level of service at any time by [choosing a plan option](/pricing) or going into your [Billing settings](/settings/billing). If you choose to downgrade your Account, you may lose access to Content, features, or capacity of your Account. Please see our section on [Cancellation](#l-cancellation-and-termination) for information on getting a copy of that Content.
+- You may change your level of service at any time by [choosing a plan option](/pricing) or going into your [Billing settings](/account/billing). If you choose to downgrade your Account, you may lose access to Content, features, or capacity of your Account. Please see our section on [Cancellation](#l-cancellation-and-termination) for information on getting a copy of that Content.
 
 #### 3. Billing Schedule; No Refunds
 
