--- a/libs/wordpress-plugin/plugin/trunk/changelog.txt
+++ b/libs/wordpress-plugin/plugin/trunk/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 0.0.7 =
+* Provider better support for querying with MariaDB
+
 = 0.0.6 =
 * Support older versions of MySQL (Minimum version is now 5.7.8 down from 8.0)
 
