--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -35,6 +35,6 @@ If you have any questions, [please open or contribute to a discussion](https://g
 1.  **in-browser** by navigating to [`blockprotocol.org/hub`](https://blockprotocol.org/hub): no account is required to browse and test blocks
 1.  **programmatically** from within other applications: either a user or an embedding application can create a free API key in order to query blocks from the Þ Hub via its API
 
-The Þ Hub exists because interoperability without discoverability is of limited use.\*\* The Þ Hub provides a single persistent, reliable, and open-source point of reference for the discovery of new Þ-compatible content. Creators only need to publish once, while embedding applications can easily discover new blocks, types and services, making them instantly available to their own users.
+**The Þ Hub exists because interoperability without discoverability is of limited use.** The Þ Hub provides a single persistent, reliable, and open-source point of reference for the discovery of new Þ-compatible content. Creators only need to publish once, while embedding applications can easily discover new blocks, types and services, making them instantly available to their own users.
 
 In addition to blocks and types, we intend to list currently supported [services](https://blockprotocol.org/docs/services) on the Þ Hub soon, and will support directly self-listing new services at a later date.
