--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -30,11 +30,6 @@ If you have any questions, [please open or contribute to a discussion](https://g
 
 ## Þ Hub & API
 
-[Blocks](https://blockprotocol.org/docs/blocks) and [types](https://blockprotocol.org/docs/types) can be published and discovered on the [Þ Hub](https://blockprotocol.org/hub), an open-source registry that anybody can use. There are two ways to access it:
-
-1.  **in-browser** by navigating to [`blockprotocol.org/hub`](https://blockprotocol.org/hub): no account is required to browse and test blocks
-1.  **programmatically** from within other applications: either a user or an embedding application can create a free API key in order to query blocks from the Þ Hub via its API
-
-**The Þ Hub exists because interoperability without discoverability is of limited use.** The Þ Hub provides a single persistent, reliable, and open-source point of reference for the discovery of new Þ-compatible content. Creators only need to publish once, while embedding applications can easily discover new blocks, types and services, making them instantly available to their own users.
+Anybody can publish [blocks](https://blockprotocol.org/docs/blocks) or [types](https://blockprotocol.org/docs/types) to the [Þ Hub](https://blockprotocol.org/docs/hub).
 
 In addition to blocks and types, we intend to list currently supported [services](https://blockprotocol.org/docs/services) on the Þ Hub soon, and will support directly self-listing new services at a later date.
