--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -28,7 +28,7 @@ We additionally explain core concepts in the Block Protocol, including:
 
 If you have any questions, [please open or contribute to a discussion](https://github.com/blockprotocol/blockprotocol/discussions) on GitHub, or [chat to us on Discord](https://blockprotocol.org/discord).
 
-## Þ Hub & API
+## Þ Hub
 
 Anybody can publish [blocks](https://blockprotocol.org/docs/blocks) or [types](https://blockprotocol.org/docs/types) to the [Þ Hub](https://blockprotocol.org/docs/hub).
 
