--- a/apps/site/src/_pages/docs/7_hub/1_api.mdx
+++ b/apps/site/src/_pages/docs/7_hub/1_api.mdx
@@ -20,6 +20,8 @@ They are split into three parts:
 
 1. the 'protocol identifier' (`b10ck5`), which is the same for all API keys.
 2. the 'public portion' of your key (`X` above, which contains 32 characters). You can think of this as your 'username', which doesn't necessarily need to remain secret.
-3. the 'private portion' of your key (`Y` above, which contains 36 characters). This is essentially your 'password'.
+3. the 'private portion' of your key (`Y` above, which contains 36 characters). This is essentially your 'password', and it should remain secret and known only to you at all times.
 
 If you believe the private portion of your key has become known to any unauthorized party, or has accidentally been made public (for example included in a code snippet uploaded to a website like GitHub) you should immediately revoke your key. You can revoke a key from the [Account > API Keys](https://blockprotocol.org/account/api) page.
+
+Once an API key has been generated, it cannot be redisplayed. As such, you should consider generating a new key whenever you require one, or storing keys securely in an encrypted password manager upon generation.
